# online_boutique_project

./: .coveragerc  .env.example  .flake8  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
cart/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cart_options_alter_cartitem_options_and_more.py
categories/: admin.py  models.py  serializers.py  tests.py  views.py
categories/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: cart.json  categories.json  products.json  subcategories.json  users.json
products/: admin.py  models.py  serializers.py  tests.py  views.py
products/migrations/: 0001_initial.py  0002_rename_category_product_subcategory.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email.py
