[tool.poetry]
name = "online-boutique-project"
version = "0.1.0"
description = ""
authors = ["Annabse27 <annabse27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
drf-yasg = "^1.21.8"
python-decouple = "^3.8"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
psycopg2 = "^2.9.10"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
